# loganalyzer

./: loganalyzer.py  pyproject.toml  requirements.txt
app/log_analyzer/: parser.py
sample_logs/: syslog.out  syslog2.out  syslog3.out
src/log_analyzer/: analysis.py  cli.py  models.py  parser.py
src/log_analyzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
